第一个功能 点击按钮 显示隐藏实现
点击按钮,整个面板以及左边导航栏内容实现隐藏会显示的效果

--- a/public/less/main.css
+++ b/public/less/main.css
@@ -495,7 +495,7 @@ img {
   overflow-x: hidden;
 }
 .collapse {
-  transform: translate(12.8125rem);
+  transform: translate(12.8125rem);/* x轴,y轴同时移动 */
 }
 .navs {
   width: 12.8125rem;
